# dory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: agent-integration.md  getting-started.md
docs/current-state/: 2026-04-20-agent-benchmark-development-plan.md  README.md  codebase-map.md  external-memory-reference.md  hermes-research-publish.md  operations-and-validation.md  runtime-and-data-flow.md  surfaces-and-integrations.md
docs/evals/: README.md
eval/: INDEX.md  README.md  categories.md  validate.py
plugins/hermes-dory/: README.md  __init__.py  config.example.yaml  plugin.yaml  provider.py
references/: client-runbook.md  runbook.md
scripts/agent-policy/: dory-policy.md  install.sh
scripts/claude-code/: dory-mcp-http-bridge.py  mcp.example.json
scripts/codex/: dory
scripts/ops/: backup.sh  client-session-shipper.py  install-backup-cron.sh  install-client-launchd.sh  install-client-systemd.sh  install-dory.sh  install-ops-launchd.sh  migrate_corpus_v1.py  migrate_timeline_v1.py  restore-check.sh  scrub_corpus_metadata.py
scripts/release/: check-public-safety.py
skills/dory-dream/: SKILL.md
skills/dory-maintain/: SKILL.md
skills/dory-search/: SKILL.md
skills/dory-wake/: SKILL.md
skills/dory-write/: SKILL.md
src/dory_cli/: _internals.py  eval.py  main.py
src/dory_core/: active_memory.py  artifacts.py  canonical_pages.py  chunking.py  claim_store.py  claims.py  compiled_wiki.py  config.py  corpus_normalization.py  digest_mining.py  digest_writer.py  embedding.py  entity_registry.py  errors.py  eval_judge.py  frontmatter.py  fs.py  link.py  llm_rerank.py  maintenance.py  markdown_store.py  metadata.py  ops.py  (+45 more)
tests/: conftest.py
(+189 files in other folders)
